  - 정해진 표를 통해 의류의 수선 사이즈를 제안
  - Add OpenCloset::Constants::Status

v0.0.1    Mon, 02 May 2016 18:56:40 +0900
  - Initial release